small overlap fix

--- a/src/components/ComboLock/Modal.css
+++ b/src/components/ComboLock/Modal.css
@@ -2,7 +2,7 @@
   position: absolute;
   bottom: 5px;
   right: 418px;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(255, 255, 255, 0.90);
   border: 1px solid lightgray;
   border-right: none;
   border-radius: 6px;
