--- a/src/components/Narration/SankeyModal.css
+++ b/src/components/Narration/SankeyModal.css
@@ -7,7 +7,7 @@
   border-radius: 6px;
   padding: 6px 6px 12px 6px;
   height: calc(100% - 40px);
-  z-index: 11
+  z-index: 9
 }
 .sankey-modal.hide {
   display: none;
